--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     "flexBasis":     photo.width * 240 / photo.height,
     "paddingBottom": photo.height / photo.width * 100,
     -->
-    <img src="https://oilerhockey.com/storage/article_images/13017-lg.webp">
-    <img src="https://a.espncdn.com/media/motion/2024/1112/ss_20241112_234456783_26925761437/ss_20241112_234456783_26925761437.jpg">
-    <img src="https://media.cnn.com/api/v1/images/stellar/prod/ap24155106761327.jpg?c=16x9&q=h_833,w_1480,c_fill">
-    <img src="https://static01.nyt.com/images/2024/06/13/multimedia/13canada-hockey-01-kchm/13canada-hockey-01-kchm-articleLarge.jpg?quality=75&auto=webp&disable=upscale">
-    <img src="https://media.d3.nhle.com/image/private/t_ratio16_9-size20/f_auto/prd/drovpjsqgn8p0dralgdq.jpg">
+    <img src="Image-1.webp">
+    <img src="Image-2.jpg">
+    <img src="Image-3.webp">
+    <img src="Image-4.jpg">
+    <img src="Image-5.avif">
 </div>
     </body>
 </html>
